solution/lab17/hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s
spec:
  type: ClusterIP
  selector:
    app: hello-k8s
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-k8s
spec:
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
      - name: hello-k8s
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
